--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
                 <!-- Colonne de droite : Formulaire -->
                 <div class="contact-form-detailed">
                     <h2>Envoyez-nous un message</h2>
-                    <!-- IMPORTANT: Remplacez "YOUR_UNIQUE_ID" par votre propre ID Formspree pour que le formulaire fonctionne. -->
-                    <form id="contact-form" class="contact-form" action="https://formspree.io/f/YOUR_UNIQUE_ID" method="POST">
+                    <!-- IMPORTANT: Assurez-vous que cet ID Formspree est le vôtre. -->
+                    <form id="contact-form" class="contact-form" action="https://formspree.io/f/mqkrvqjy" method="POST">
                         <p class="form-required-notice">Les champs marqués d'un <span class="required-star" aria-hidden="true">*</span> sont obligatoires.</p>
                         <div class="form-group">
                             <label for="name-input">Votre nom complet <span class="required-star" aria-hidden="true">*</span></label>
