--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.votre-domaine.fr/index.html">
+    <meta property="og:url" content="https://booklite.netlify.app/">
     <meta property="og:title" content="Booklite - Expertise en Modélisation de Données Merise">
     <meta property="og:description" content="Agence spécialisée dans la modélisation de données Merise. Nous transformons vos données en un atout stratégique via la conception, l'optimisation et la formation.">
-    <meta property="og:image" content="https://www.votre-domaine.fr/images/social-share-home.png">
+    <meta property="og:image" content="https://booklite.netlify.app/images/social-share-home.png">
     <meta property="og:site_name" content="Booklite">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.votre-domaine.fr/index.html">
+    <meta name="twitter:url" content="https://booklite.netlify.app/">
     <meta name="twitter:title" content="Booklite - Expertise en Modélisation de Données Merise">
     <meta name="twitter:description" content="Agence spécialisée dans la modélisation de données Merise. Nous transformons vos données en un atout stratégique via la conception, l'optimisation et la formation.">
-    <meta name="twitter:image" content="https://www.votre-domaine.fr/images/social-share-home.png">
+    <meta name="twitter:image" content="https://booklite.netlify.app/images/social-share-home.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
     <!-- Intégration de Font Awesome pour les icônes -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Plausible Analytics -->
-    <script defer data-domain="votre-domaine.fr" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="booklite.netlify.app" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
 
