--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Intégration de Leaflet.js pour la carte -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <!-- Script pour Google reCAPTCHA, à activer si vous utilisez cette fonctionnalité -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <header class="main-header">
@@ -47,7 +49,6 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <script src="https://www.google.com/recaptcha/api.js" async defer></script>
                 <h1 class="page-title">Contactez-nous</h1>
                 <p class="page-subtitle">Nous sommes à votre écoute pour toute question ou demande de projet.</p>
             </div>
@@ -113,8 +114,11 @@
                         </fieldset>
 
                         <div class="progress-bar" id="progress-bar"></div>
-                        <!-- IMPORTANT: Pour activer reCAPTCHA, décommentez la ligne ci-dessous et remplacez "YOUR_RECAPTCHA_SITE_KEY" par votre clé de site Google reCAPTCHA. -->
-                        <!-- <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div> -->
+                        <!-- Bloc reCAPTCHA : Remplacez YOUR_RECAPTCHA_SITE_KEY par votre clé de site -->
+                        <div class="form-group">
+                            <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY" aria-describedby="recaptcha-error"></div>
+                            <span id="recaptcha-error" class="error-message" aria-live="polite"></span>
+                        </div>
                         <div class="form-group">
                             <button type="submit" class="cta-button">Envoyer le message</button>
                         </div>
